k8s/bookstack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bookstack
  name: bookstack
  namespace: bookstack-dmz
spec:
  selector:
    matchLabels:
      app: bookstack
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      containers:
        - name: bookstack
          image: lscr.io/linuxserver/bookstack:24.05.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: bookstack-app-data
              mountPath: /config
      volumes:
        - name: bookstack-app-data
          persistentVolumeClaim:
            claimName: bookstack-app-pvc
