k8s/bookstack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  namespace: bookstack-dmz
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: bookstack
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: bookstack-db
  namespace: bookstack-dmz
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mariadb
  type: ClusterIP
