k8s/bookstack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack
  namespace: bookstack-dmz
  annotations:
    kubernetes.io/ingress.className: traefik
spec:
  tls:
  - hosts:
    - kb.koryalbert.net
    secretName: koryalbert-net
  ingressClassName: traefik
  rules:
  - host: kb.koryalbert.net
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookstack
                port:
                  number: 80
